--- a/index.html
+++ b/index.html
@@ -3,42 +3,45 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, inital-scale=1.0">
     <title>Encriptador</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <header>
-        <div id="caixa-header">
-            <img src="imagens/logo.png" alt="Logo Encriptador">
-            <h1 class="titulo-principal">Encriptador de Texto</h1>
-        </div>
+        <img src="imagens/logo.png" alt="Logo Encriptador">
+        <h1>Encriptador de Texto</h1>
     </header>
 
     <main>
-        <div class="div-inserir">
-            <input class="input-texto" id="texto-inserido" type="text" placeholder="Digite seu texto aqui...">
-        </div>
+        <div class="caixa-area">
+            <textarea type="text" placeholder="Insira seu texto aqui..." class="caixa-texto"></textarea>
 
-        <div class="div-botoes">
+            <div class="caixa-atencao">
+                <img src="imagens/exclamacao.png"><p>Apenas letras minúsculas e sem acento.</p>
+            </div>
+
             <input type="button" value="Criptografar" class="botoes">
             <input type="button" value="Descriptografar" class="botoes">
         </div>
 
-        <div class="div-resultado">
-            <input class="input-texto" id="texto-resultado" placeholder="Seu texto irá aparecer aqui!">
-        </div>
-        
-        <div class="botao-copiar">
-            <input type="button" value="Copiar">
+        <div class="caixa-area">
+            <textarea type="text" placeholder="O texto criptografado ou descriptogrado irá aparecer aqui..."
+                class="caixa-resultado"></textarea>
+            <input type="button" value="Copiar" class="botoes">
         </div>
     </main>
 
     <footer>
-        <p>&copy; Desenvolvido por <a href="https://github.com/naluhfvc" target="_blank" class="linkAutor"> Ana Luiza
-                Favacho - 2022</a></p>
+        <p>&copy; Desenvolvido por <a href="https://github.com/naluhfvc" target="_blank"> Ana Luiza Favacho</a> - 2022
+        </p>
+        <p><a href="https://github.com/naluhfvc" target="_blank"><img src="imagens/github.png"></a>
+            <a href="https://www.linkedin.com/in/luizafavacho-dev" target="_blank"><img src="imagens/linkedin.png"></a>
+        </p>
     </footer>
 </body>
 
